--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@ set -g prefix C-a
 bind C-a send-prefix
 
 bind '|' split-window -h
-bind '-' split-window -c
+bind-key - splitw -fw
 
 prfx="#{?client_prefix,<Prefix>,}"
 set -g status-right "${prfx}"
@@ -50,11 +50,13 @@ bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
 # bind-key -r i run-shell "tmux neww tmux-cht.sh"
 bind-key -r v run-shell "~/.local/bin/tmux-sessionizer ~/Obsidian/myVault/"
-bind-key -r n run-shell "~/.local/bin/tmux-sessionizer ~/.config/kickstarted_nvim/"
-bind-key -r C run-shell "~/.local/bin/tmux-sessionizer ~/.config/"
-bind-key -r A run-shell "~/.local/bin/tmux-sessionizer ~/.configalt/"
-bind-key -r D run-shell "~/.local/bin/tmux-sessionizer ~/Documents/"
-bind-key -r E run-shell "~/.local/bin/tmux-sessionizer ~/Prog/Obsidian-Paper-Export/"
+bind-key -r c run-shell "~/.local/bin/tmux-sessionizer ~/.config/kickstarted_nvim/"
+bind-key -r J run-shell "~/.local/bin/tmux-sessionizer ~/Documents/auto_exports/Longform_journal_uneven_sampling_2024/"
+bind-key -r m run-shell "~/.local/bin/tmux-sessionizer ~/Prog/Model-adapted-Fourier-sampling-for-generative-compressed-sensing/"
+bind-key -r e run-shell "~/.local/bin/tmux-sessionizer ~/Prog/Paper_export_projects/Plugin-paper-latex-export/"
+bind-key -r p run-shell "~/.local/bin/tmux-sessionizer ~/Prog/Paper_export_projects/Obsidian-Paper-Export/"
+bind-key -r r run-shell "~/.local/bin/tmux-sessionizer ~/Obsidian/myVault/Shared/Exact_regularisation/"
+
 # bind-key -r C run-shell "~/.local/bin/tmux-sessionizer ~/work/tvui"
 # bind-key -r R run-shell "~/.local/bin/tmux-sessionizer ~/work/milo"
 # # bind-key -r L run-shell "~/.local/bin/tmux-sessionizer ~/work/hpack"
