--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,6 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
-bind r source-file ~/.tmux.conf
 set -g base-index 1
 
 set-window-option -g mode-keys vi
@@ -35,34 +34,21 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 
 # vim-like pane switching
 bind -r ^ last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+bind k select-pane -U
+bind j select-pane -D
+bind h select-pane -L
+bind l select-pane -R
 
 bind-key S run-shell "tmux kill-session -t $(tmux display-message -p '#S')" \; switch-client
 
-# bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/personal/todo.md"
-
 # forget the find window.  That is for chumps
-# bind-key -r M-f 
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
-# bind-key -r i run-shell "tmux neww tmux-cht.sh"
-bind-key -r v run-shell "~/.local/bin/tmux-sessionizer ~/Obsidian/myVault/"
-bind-key -r c run-shell "~/.local/bin/tmux-sessionizer ~/.config/kickstarted_nvim/"
-bind-key -r J run-shell "~/.local/bin/tmux-sessionizer ~/Documents/auto_exports/Longform_journal_uneven_sampling_2024/"
-bind-key -r m run-shell "~/.local/bin/tmux-sessionizer ~/Prog/Model-adapted-Fourier-sampling-for-generative-compressed-sensing/"
-bind-key -r e run-shell "~/.local/bin/tmux-sessionizer ~/Prog/Paper_export_projects/Plugin-paper-latex-export/"
-bind-key -r p run-shell "~/.local/bin/tmux-sessionizer ~/Prog/Paper_export_projects/Obsidian-Paper-Export/"
-bind-key -r r run-shell "~/.local/bin/tmux-sessionizer ~/Obsidian/myVault/Shared/Exact_regularisation/"
-
-# bind-key -r C run-shell "~/.local/bin/tmux-sessionizer ~/work/tvui"
-# bind-key -r R run-shell "~/.local/bin/tmux-sessionizer ~/work/milo"
-# # bind-key -r L run-shell "~/.local/bin/tmux-sessionizer ~/work/hpack"
-# bind-key -r H run-shell "~/.local/bin/tmux-sessionizer ~/personal/vim-with-me"
-# bind-key -r T run-shell "~/.local/bin/tmux-sessionizer ~/personal/refactoring.nvim"
-# bind-key -r N run-shell "~/.local/bin/tmux-sessionizer ~/personal/harpoon"
-# bind-key -r S run-shell "~/.local/bin/tmux-sessionizer ~/personal/developer-productivity"
-
-
+bind-key v run-shell "~/.local/bin/tmux-sessionizer ~/Obsidian/myVault/"
+bind-key E run-shell "~/.local/bin/tmux-sessionizer ~/Obsidian/myVault/Exports/Longform_journal_uneven_sampling_2024/"
+bind-key c run-shell "~/.local/bin/tmux-sessionizer ~/.config/my_nvim/"
+bind-key J run-shell "~/.local/bin/tmux-sessionizer ~/Obsidian/related_docs/Journal-2024-uneven-sampling/"
+bind-key m run-shell "~/.local/bin/tmux-sessionizer ~/Prog/Model-adapted-Fourier-sampling-for-generative-compressed-sensing/"
+bind-key p run-shell "~/.local/bin/tmux-sessionizer ~/Obsidian/myVault/.obsidian/plugins/Latex-Exporter/"
+bind-key e run-shell "~/.local/bin/tmux-sessionizer ~/Obsidian/myVault/Shared/Exact_regularisation/"
+bind-key o run-shell "~/.local/bin/tmux-sessionizer ~/Obsidian/related_docs/"
