--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@ set -g prefix C-a
 bind C-a send-prefix
 
 bind '|' split-window -h
-bind-key - splitw -fw
+bind-key - splitw -f
 
 prfx="#{?client_prefix,<Prefix>,}"
 set -g status-right "${prfx}"
